# ffmpeg-deeplearning-encode

./: .gitignore  README.md
FFmpeg/libavcodec/: vaapi_encode.c  vaapi_encode.h
FFmpeg/libavutil/: frame.h  hwcontext_vaapi.c
detect/: CMakeLists.txt  detector.cpp  interface.c  interface.cpp  interface.h
gmmlib/Source/GmmLib/CachePolicy/: GmmGen10CachePolicy.cpp
libdetect/: CMakeLists.txt  CmakeLists.txt  detector.cpp  detector.h
media-driver/media_driver/cmake/linux/: media_compile_flags_linux.cmake
models/: voc.names
sample/: CMakeLists.txt
sample/detect/: CMakeLists.txt  object_detection.cpp
sample/detect_app/: CMakeLists.txt  detect_app.cpp
sample/edge/: CMakeLists.txt  edge.cpp
test/: CMakeLists.txt  detect2.cpp  test1.cpp
test/interface/: CMakeLists.txt  test.c
